look and feel updates

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,9 +10,9 @@
 
     <button (click)="openPage('patients')"><mat-icon>people</mat-icon><span>CLIENTS</span></button>
     
-    <button (click)="openPage('invoices')"><mat-icon>history</mat-icon><span>INVOICE HISTORY</span></button>
-
     <button (click)="openPage('settings')"><mat-icon>settings</mat-icon><span>SETTINGS</span></button>
+
+    <button (click)="openPage('terms')"><mat-icon>done</mat-icon><span>TERMS & CONDITIONS</span></button>
 
     <button mat-button (click)="logout()">LOGOUT</button>
   </ion-content>
