--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -114,6 +114,7 @@ ion-menu ion-content.content-md {
     color: white;
     letter-spacing: .5px;
     font-size: 16px;
+    text-transform: capitalize!important;
   }
 }
 
