--- a/src/pages/login/terms.scss
+++ b/src/pages/login/terms.scss
@@ -1,5 +1,11 @@
 @import 'theme/variables';
 jh-terms {
+  
+  .logo-wrapper {
+    margin:2rem auto;
+    width: 160px;
+  }
+
   .toolbar-background {
     background: mat-color($jh-palette-blue, 500)!important;
   }
@@ -9,23 +15,38 @@ jh-terms {
       color: black;
       font-weight:300;
     }
-    color: rgba(0,0,0,0.54);
+    color: rgba(0, 0, 0, 0.54);
     max-height: 85%;
     overflow-y: scroll;
     margin: 8px;
+    position: absolute;
     padding: 16px;
-    border-bottom: 1px solid rgba(0,0,0,0.12);
+    left: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    right: 0;
+    bottom: 70px;
+    top: 100px;
   }
   section {
     display: flex;
     flex-direction: row-reverse;
     margin: 24px;
+    bottom: 0;
+    position: fixed;
+    right: 0;
+    height: 40px;
+    left: 0;
+
+    button {
+      width:50%;
+      margin-bottom:1rem;
+    }
   }
   .primary {
     background: mat-color($jh-palette-blue, 500);
     color: white;
     margin-left: 16px; 
-  }
+  }  
 
 
 }
