--- a/src/pages/contacts/contact-details.scss
+++ b/src/pages/contacts/contact-details.scss
@@ -1,6 +1,25 @@
 @import 'theme/variables';
 
 jh-contact-details {
+
+  .bottom-button { background: white;
+    /* padding: 30%; */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width:100%;
+    height: 64px;
+    color: rgba(0,0,0,0.54);
+    padding-top: 8px;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    mat-icon {
+      display: block;
+    text-align: center;
+    margin: auto;
+    margin-bottom: -5px;
+    }
+  }
   .mat-tab-body-content {
     min-height: 500px;
   }
