--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
       </span>
     </div>
 
-    <button *ngIf="isCheckedIn !== 'true'" (click)="openPage('patients')"><mat-icon>people</mat-icon><span>CLIENTS</span></button>
+    <button (click)="openPage('patients')"><mat-icon>people</mat-icon><span>CLIENTS</span></button>
     
     <button *ngIf="isCheckedIn !== 'true'" (click)="openPage('settings')"><mat-icon>settings</mat-icon><span>SETTINGS</span></button>
 
