--- a/src/pages/contacts/dialogs/dialogs.scss
+++ b/src/pages/contacts/dialogs/dialogs.scss
@@ -169,6 +169,10 @@ jh-check-out, jh-check-in-create, jh-edit-time, jh-submit-time, jh-delete-time {
 
 .otherTb {
   margin-top:-18px!important;
+  margin-left:44px!important;
+  .mat-input-wrapper {
+    margin-left:0!important;
+  }
 }
 
 jh-check-out mat-checkbox {
