--- a/src/pages/invoices/invoices.scss
+++ b/src/pages/invoices/invoices.scss
@@ -1,6 +1,15 @@
 @import 'theme/variables';
 
-jh-invoices {
+.customer {
+  margin-top:16px;
+  margin-left: 16px;
+  div {
+    font-weight: bold;
+    margin-bottom: 16px;
+  }
+}
+
+jh-invoices, jh-all-invoices {
   .refresh {
     position:absolute;
     right:8px;
@@ -281,6 +290,20 @@ jh-invoices {
         height:30px;
       }
     }
+  }
+}
+
+jh-all-invoices {
+  mat-row mat-cell:nth-child(3), mat-header-row mat-header-cell:nth-child(3) {
+    text-align: right;
+  }
+  mat-card {
+    padding:0!important;
+  }
+  
+
+  .Not.Submitted {
+    color: #C6401D;
   }
 }
 
