--- a/src/pages/contacts/dialogs/dialogs.scss
+++ b/src/pages/contacts/dialogs/dialogs.scss
@@ -1,6 +1,6 @@
 @import "theme/variables";
 
-jh-check-out, jh-check-in-create, jh-edit-time, jh-submit-time, jh-delete-time {
+jh-check-out, jh-check-in-create, jh-edit-time, jh-submit-time, jh-delete-time, jh-submit-invoice {
   .mat-form-field {
     width: 100%;
     margin: 8px 0;
