--- a/src/pages/contacts/dialogs/dialogs.scss
+++ b/src/pages/contacts/dialogs/dialogs.scss
@@ -98,9 +98,10 @@ jh-check-out, jh-check-in-create, jh-edit-time, jh-submit-time, jh-delete-time, 
    }
    .error {
      margin-left: 40px;
-     margin-bottom:24px;
+     margin-bottom:16px;
      margin-top: -8px;
      color: #c6401D;
+     display: block;
    }
 
   .customer div {
